fixing location query param

--- a/config-as-code/helm/charts/health-services/project/values.yaml
+++ b/config-as-code/helm/charts/health-services/project/values.yaml
@@ -232,7 +232,7 @@ env: |
   - name: EGOV_LOCATION_HIERARCHY_TYPE
     value: "ADMIN"
   - name: EGOV_LOCATION_CODE_QUERY_PARAM
-    value: "code"
+    value: "codes"
   - name: EGOV_USER_ID_VALIDATOR
     value: "egov-user"
   - name: EGOV_PERSISTER_BULK_PROCESSING_ENABLED
