--- a/config-as-code/helm/charts/health-services/referralmanagement/values.yaml
+++ b/config-as-code/helm/charts/health-services/referralmanagement/values.yaml
@@ -195,4 +195,4 @@ env: |
   - name: EGOV_LOCATION_HIERARCHY_TYPE
     value: "ADMIN"
   - name: EGOV_LOCATION_CODE_QUERY_PARAM
-    value: "code"
+    value: "codes"
