--- a/config-as-code/helm/environments/moz-health-qa.yaml
+++ b/config-as-code/helm/environments/moz-health-qa.yaml
@@ -153,6 +153,7 @@ cluster-configs:
         stock: "http://stock:8080/"
         facility: "http://facility:8080/"
         service-request: "http://service-request:8080/"
+        attendance-service: "http://attendance.works:8080/"
 
     hcm-moz-impl:
       data:
@@ -280,7 +281,7 @@ egov-pg-service:
   axis: true
 
 audit-service:
-  persist-yml-path: "https://raw.githubusercontent.com/HCM-MOZ-IMPEL/health-campaign-config/QA/egov-persister/egov-workflow-v2-persister.yml,https://raw.githubusercontent.com/HCM-MOZ-IMPEL/health-campaign-config/QA/egov-persister/facility-persister.yml,https://raw.githubusercontent.com/HCM-MOZ-IMPEL/health-campaign-config/QA/egov-persister/hcm-moz-impl-persister.yml,https://raw.githubusercontent.com/HCM-MOZ-IMPEL/health-campaign-config/QA/egov-persister/household-persister.yml,https://raw.githubusercontent.com/HCM-MOZ-IMPEL/health-campaign-config/QA/egov-persister/hrms-employee-persister.yml,https://raw.githubusercontent.com/HCM-MOZ-IMPEL/health-campaign-config/QA/egov-persister/individual-persister.yml,https://raw.githubusercontent.com/HCM-MOZ-IMPEL/health-campaign-config/QA/egov-persister/stock-persister.yml,https://raw.githubusercontent.com/HCM-MOZ-IMPEL/health-campaign-config/QA/egov-persister/service-request-persister.yml,https://raw.githubusercontent.com/HCM-MOZ-IMPEL/health-campaign-config/QA/egov-persister/project-task-persister.yml,https://raw.githubusercontent.com/HCM-MOZ-IMPEL/health-campaign-config/QA/egov-persister/project-persister.yml,https://raw.githubusercontent.com/HCM-MOZ-IMPEL/health-campaign-config/QA/egov-persister/product-persister.yml"
+  persist-yml-path: "https://raw.githubusercontent.com/HCM-MOZ-IMPEL/health-campaign-config/QA/egov-persister/egov-workflow-v2-persister.yml,https://raw.githubusercontent.com/HCM-MOZ-IMPEL/health-campaign-config/QA/egov-persister/facility-persister.yml,https://raw.githubusercontent.com/HCM-MOZ-IMPEL/health-campaign-config/QA/egov-persister/hcm-moz-impl-persister.yml,https://raw.githubusercontent.com/HCM-MOZ-IMPEL/health-campaign-config/QA/egov-persister/household-persister.yml,https://raw.githubusercontent.com/HCM-MOZ-IMPEL/health-campaign-config/QA/egov-persister/hrms-employee-persister.yml,https://raw.githubusercontent.com/HCM-MOZ-IMPEL/health-campaign-config/QA/egov-persister/individual-persister.yml,https://raw.githubusercontent.com/HCM-MOZ-IMPEL/health-campaign-config/QA/egov-persister/stock-persister.yml,https://raw.githubusercontent.com/HCM-MOZ-IMPEL/health-campaign-config/QA/egov-persister/service-request-persister.yml,https://raw.githubusercontent.com/HCM-MOZ-IMPEL/health-campaign-config/QA/egov-persister/project-task-persister.yml,https://raw.githubusercontent.com/HCM-MOZ-IMPEL/health-campaign-config/QA/egov-persister/project-persister.yml,https://raw.githubusercontent.com/HCM-MOZ-IMPEL/health-campaign-config/QA/egov-persister/product-persister.yml,https://raw.githubusercontent.com/HCM-MOZ-IMPEL/health-campaign-config/QA/egov-persister/attendance-service-persister.yml"
   initContainers:
     gitSync:
       repo: "git@github.com:HCM-MOZ-IMPEL/health-campaign-config"
@@ -337,7 +338,7 @@ egov-persister:
   replicas: 1
   images:
     - egovio/egov-persister
-  persist-yml-path: "file:///work-dir/health-campaign-config/egov-persister/audit-service-persister.yml,file:///work-dir/health-campaign-config/egov-persister/egov-user-event-persister.yml,file:///work-dir/health-campaign-config/egov-persister/egov-workflow-v2-persister.yml,file:///work-dir/health-campaign-config/egov-persister/hrms-employee-persister.yml,file:///work-dir/health-campaign-config/egov-persister/pdf-generator.yml,file:///work-dir/health-campaign-config/egov-persister/product-persister.yml,file:///work-dir/health-campaign-config/egov-persister/project-persister.yml,file:///work-dir/health-campaign-config/egov-persister/individual-persister.yml,file:///work-dir/health-campaign-config/egov-persister/household-persister.yml,file:///work-dir/health-campaign-config/egov-persister/project-task-persister.yml,file:///work-dir/health-campaign-config/egov-persister/stock-persister.yml,file:///work-dir/health-campaign-config/egov-persister/facility-persister.yml,file:///work-dir/health-campaign-config/egov-persister/service-request-persister.yml,file:///work-dir/health-campaign-config/egov-persister/pgr-services-persister.yml,file:///work-dir/health-campaign-config/egov-persister/hcm-moz-impl-persister.yml,file:///work-dir/health-campaign-config/egov-persister/mdms-persister.yml,file:///work-dir/health-campaign-config/egov-persister/referral-management-persister.yml"
+  persist-yml-path: "file:///work-dir/health-campaign-config/egov-persister/audit-service-persister.yml,file:///work-dir/health-campaign-config/egov-persister/egov-user-event-persister.yml,file:///work-dir/health-campaign-config/egov-persister/egov-workflow-v2-persister.yml,file:///work-dir/health-campaign-config/egov-persister/hrms-employee-persister.yml,file:///work-dir/health-campaign-config/egov-persister/pdf-generator.yml,file:///work-dir/health-campaign-config/egov-persister/product-persister.yml,file:///work-dir/health-campaign-config/egov-persister/project-persister.yml,file:///work-dir/health-campaign-config/egov-persister/individual-persister.yml,file:///work-dir/health-campaign-config/egov-persister/household-persister.yml,file:///work-dir/health-campaign-config/egov-persister/project-task-persister.yml,file:///work-dir/health-campaign-config/egov-persister/stock-persister.yml,file:///work-dir/health-campaign-config/egov-persister/facility-persister.yml,file:///work-dir/health-campaign-config/egov-persister/service-request-persister.yml,file:///work-dir/health-campaign-config/egov-persister/pgr-services-persister.yml,file:///work-dir/health-campaign-config/egov-persister/hcm-moz-impl-persister.yml,file:///work-dir/health-campaign-config/egov-persister/mdms-persister.yml,file:///work-dir/health-campaign-config/egov-persister/referral-management-persister.yml,file:///work-dir/health-campaign-config/egov-persister/attendance-service-persister.yml,"
   initContainers:
     gitSync:
       repo: "git@github.com:HCM-MOZ-IMPEL/health-campaign-config"      ##### Change repo url with Your fork Repo url
@@ -936,3 +937,15 @@ hcm-moz-impl:
       memory: "2Gi"
     limits:
       memory: "2Gi"
+attendance-service:
+  tracing-enabled: true
+  java-enable-debug: true
+  attendance-register-default-offset: 0
+  attendance-register-default-limit: 10
+  attendance-register-search-max-limit: 100
+  attendance-individual-service-integration-required: false
+  attendance-staff-service-integration-required: false
+  attendance-document-id-verification-required: false
+  attendance-register-open-search-enabled-roles: "SUPERUSER,SYSTEM_ADMINISTRATOR"
+  organisation-contact-details-update-topic: organisation.contact.details.update
+  contracts-revision-topic: "contracts-revision"
