--- a/config-as-code/product-release-charts/Health/dependancy_chart-moz-health-qa.yaml
+++ b/config-as-code/product-release-charts/Health/dependancy_chart-moz-health-qa.yaml
@@ -84,3 +84,4 @@ modules:
       - egovio/hcm-moz-impl:develop-66239ad-288
       - egovio/egov-mdms-create:develop-3a53c3b-3
       - egovio/referralmanagement:master-impel-523cc26c16-14
+      - egovio/attendance:v1.0.0-743b0814-46
