--- a/config-as-code/helm/charts/health-services/hcm-moz-impl/values.yaml
+++ b/config-as-code/helm/charts/health-services/hcm-moz-impl/values.yaml
@@ -203,9 +203,9 @@ env: |
   - name: EGOV_DHIS2_ORGANISATION_UNIT_PROVINCES
     value: "SOFALA,NAMPULA"
   - name: EGOV_PROJECT_TYPE_ID
-    value: dbd45c31-de9e-4e62-a9b6-abb818928fd1
+    value: 644c4356-5214-11ee-be56-0242ac120002
   - name: EGOV_PROJECT_TYPE
-    value: LLIN-Default
+    value: MR-DN
   - name: EGOV_FACILITY_HOST
     valueFrom:
       configMapKeyRef:
@@ -259,7 +259,7 @@ env: |
   - name: EGOV_PROJECT_RESOURCE_UPDATE_PATH
     value: /project/resource/v1/bulk/_update
   - name: EGOV_SERVICE_REQUEST_PROJECTCODE
-    value: LLINMozambique2
+    value: SMCMozambique
   - name: EGOV_HOUSEHOLD_HOST
     valueFrom:
       configMapKeyRef:
@@ -300,6 +300,14 @@ env: |
     value: update-individual-topic
   - name: EGOV_HCM_INDIVIDUAL_CREATE_TOPIC
     value: save-individual-topic
+  - name: BOUNDARY_DATA_KAFKA_CREATE_TOPIC_CSV
+    value: create-boundaryCSV-data
+  - name: EGOV_MDMS_PROJECT_MASTER_NAME
+    value: projectTypes
+  - name: EGOV_MDMS_PROJECT_MODULE_NAME
+    value: HCM-PROJECT-TYPES
+  - name: EGOV_PRODUCT_SEARCH_PATH
+    value: /product/v1/_search
   - name: EGOV_INDIVIDUAL_HOST
     valueFrom:
       configMapKeyRef:
