--- a/config-as-code/helm/charts/backbone-services/kibana8-v1/values.yaml
+++ b/config-as-code/helm/charts/backbone-services/kibana8-v1/values.yaml
@@ -7,9 +7,9 @@ namespace: es-cluster-v8
 ingress:
   enabled: true
   context: "kibana8"
-  additionalAnnotations: |
-    nginx.ingress.kubernetes.io/auth-signin:  https://$host/oauth2/start?rd=$escaped_request_uri
-    nginx.ingress.kubernetes.io/auth-url:     https://$host/oauth2/auth 
+#  additionalAnnotations: |
+#    nginx.ingress.kubernetes.io/auth-signin:  https://$host/oauth2/start?rd=$escaped_request_uri
+#    nginx.ingress.kubernetes.io/auth-url:     https://$host/oauth2/auth
 
 # Init Containers Configs
 initContainers: {}
