adding kibana login user creds as secret

--- a/config-as-code/helm/charts/cluster-configs/values.yaml
+++ b/config-as-code/helm/charts/cluster-configs/values.yaml
@@ -146,3 +146,7 @@ cluster-configs:
     postgres:
       namespace: jenkins
       name: postgres
+
+    elastic:
+      namespace: egov
+      name: elastic
