--- a/config-as-code/environments/moz-health-uat.yaml
+++ b/config-as-code/environments/moz-health-uat.yaml
@@ -22,8 +22,8 @@ cluster-configs:
         aws-cluster-name: "arn:aws:eks:ap-south-1:680148267093:cluster/moz-health-uat1"
         egov-state-level-tenant-id: "mz"
         s3-assets-bucket: "(pg-health-egov-assets|egov-health-playground-assets)"
-        es-host: "esearch8-data.es-cluster-v8"
-        es-indexer-host: "http://esearch8-data.es-cluster-v8:9200/"
+        es-host: "elasticsearch-data.es-cluster-v8"
+        es-indexer-host: "http://elasticsearch-data.es-cluster-v8:9200/"
         flyway-locations: "filesystem:/flyway/sql,filesystem:/flyway/seed,filesystem:/flyway/qa"
         kafka-brokers: "kafka-v2.kafka-cluster:9092"
         kafka-infra-brokers: "kafka-v2-infra.kafka-cluster:9092"
@@ -81,7 +81,7 @@ cluster-configs:
         egov-data-uploader: "http://egov-data-uploader:8080/"
         egov-indexer: "http://egov-indexer:8080/"
         egov-hrms: "http://egov-hrms:8080/"
-        es-client: "http://esearch8-data.es-cluster-v8:9200"
+        es-client: "http://elasticsearch-data.es-cluster-v8:9200"
         hr-masters: "http://hr-masters:8080/"
         hr-employee: "http://hr-employee:8080/"
         hr-masters-v2: "http://hr-masters-v2:8080/"
