adding anonymous user account for kibana

--- a/config-as-code/helm/charts/backbone-services/kibana/values.yaml
+++ b/config-as-code/helm/charts/backbone-services/kibana/values.yaml
@@ -67,10 +67,16 @@ serverBasePath: /kibana-upgrade
 
 # Allows you to add any config files in /usr/share/kibana/config/
 # such as kibana.yml
-kibanaConfig: {}
-#   kibana.yml: |
-#     key:
-#       nestedkey: value
+kibanaConfig:
+   kibana.yml: |
+     xpack.security.authc.providers:
+       basic.basic1:
+         order: 0
+       anonymous.anonymous1:
+         order: 1
+         credentials:
+           username: "anonymous_service_account"
+           password: "anonymous_service_account_password"
 
 # If Pod Security Policy in use it may be required to specify security context as well as service account
 
