adding elastic charts to prod

--- a/config-as-code/environments/moz-health-prd.yaml
+++ b/config-as-code/environments/moz-health-prd.yaml
@@ -834,6 +834,34 @@ elasticsearch-data-v1:
     limits:
       memory: "3Gi"
 
+
+# es-v1-cluster AWS >>>>>>>>>>>>>>>>>>>>>>>>>>>>
+elasticsearch-data:
+  image:
+    tag: 8.11.1
+  volumeClaimTemplate:
+    accessModes: [ "ReadWriteOnce" ]
+    resources:
+      requests:
+        storage: 100Gi
+  persistence:
+    enabled: true
+    dataDirSize: "100Gi"
+    aws:
+      - volumeId: "vol-006fb06e07f1b0188" ## add your respective volume id eg. vol-0085073c65f76dre5
+        zone: af-south-1b            ## add your respective zone eg. af-south-1b
+      - volumeId: "vol-0c814693a6231eca6" ## add your respective volume id eg. vol-0085073c65f76dre5
+        zone: af-south-1b            ## add your respective zone eg. af-south-1b
+      - volumeId: "vol-016bc0ba277198a63" ## add your respective volume id eg. vol-0085073c65f76dre5
+        zone: af-south-1b            ## add your respective zone eg. af-south-1b
+
+  esJavaOpts: "-Xmx2g -Xms2g"
+  resources:
+    requests:
+      memory: "2.5Gi"
+    limits:
+      memory: "2.5Gi"
+
 # es-v1-cluster AWS >>>>>>>>>>>>>>>>>>>>>>>>>>>>
 elasticsearch-data-infra-v1:
   image:
@@ -918,6 +946,48 @@ elasticsearch-master-v1:
       memory: "896Mi"
     limits:
       memory: "896Mi"
+### es-master-infra-v1 AWS >>>>>>>>>>>>>>>>>>>>
+
+### es-master-v1 AWS >>>>>>>>>>>>>>>>>>>>
+
+elasticsearch-master:
+  replicas: 3
+  image:
+    tag: 8.11.1
+  volumeClaimTemplate:
+    accessModes: [ "ReadWriteOnce" ]
+    resources:
+      requests:
+        storage: 10Gi
+  persistence:
+    enabled: true
+    dataDirSize: "10Gi"
+    aws:
+      - volumeId: "vol-03edebc9323919c93" ## add your respective volume id eg. vol-0085073c65f76dre5
+        zone: af-south-1b            ## add your respective zone eg. af-south-1b
+      - volumeId: "vol-0017f5f0adcd5ce6a" ## add your respective volume id eg. vol-0085073c65f76dre5
+        zone: af-south-1b            ## add your respective zone eg. af-south-1b
+      - volumeId: "	vol-0108f46a19a91edeb" ## add your respective volume id eg. vol-0085073c65f76dre5
+        zone: af-south-1b            ## add your respective zone eg. af-south-1b
+
+  esJavaOpts: "-Xmx448m -Xms448m"
+  resources:
+    requests:
+      memory: "896Mi"
+    limits:
+      memory: "896Mi"
+
+#kibana:
+#  ingress:
+#    hosts:
+#      - host: salama.digit.org
+#        paths:
+#          - path: /kibana-upgrade
+#    tls:
+#      - secretName: salama.digit.org-tls-certs
+#        hosts:
+#          - salama.digit.org
+
 ### es-master-infra-v1 AWS >>>>>>>>>>>>>>>>>>>>
 
 elasticsearch-master-infra-v1:
