--- a/config-as-code/environments/moz-health-prd.yaml
+++ b/config-as-code/environments/moz-health-prd.yaml
@@ -22,9 +22,9 @@ cluster-configs:
         aws-cluster-name: "arn:aws:eks:af-south-1:564518252813:cluster/moz-health-prd"
         egov-state-level-tenant-id: "mz"
         s3-assets-bucket: "(pg-health-egov-assets|egov-health-playground-assets)"
-        es-host: "elasticsearch-data-v1.es-cluster"
+        es-host: "elasticsearch-data.es-cluster"
         es-infra-host: "elasticsearch-data-infra-v1.es-cluster-infra"
-        es-indexer-host: "http://elasticsearch-data-v1.es-cluster:9200/"
+        es-indexer-host: "http://elasticsearch-data.es-cluster:9200/"
         flyway-locations: "filesystem:/flyway/sql,filesystem:/flyway/seed,filesystem:/flyway/qa"
         kafka-brokers: "kafka-v2.kafka-cluster:9092"
         kafka-infra-brokers: "kafka-v2-infra.kafka-cluster:9092"
@@ -83,7 +83,7 @@ cluster-configs:
         egov-data-uploader: "http://egov-data-uploader:8080/"
         egov-indexer: "http://egov-indexer:8080/"
         egov-hrms: "http://egov-hrms:8080/"
-        es-client: "http://elasticsearch-data-v1.es-cluster:9200"
+        es-client: "http://elasticsearch-data.es-cluster:9200"
         hr-masters: "http://hr-masters:8080/"
         hr-employee: "http://hr-employee:8080/"
         hr-masters-v2: "http://hr-masters-v2:8080/"
