--- a/config-as-code/product-release-charts/Health/dependancy_chart-moz-health-prd.yaml
+++ b/config-as-code/product-release-charts/Health/dependancy_chart-moz-health-prd.yaml
@@ -84,3 +84,4 @@ modules:
       - egovio/project:master-impel-82abd11612-195
       - egovio/hcm-moz-impl:develop-6a0adc0-323
       - egovio/egov-mdms-create:develop-3a53c3b-3
+      - egovio/referralmanagement:master-impel-33b545a2f6-43
