adding jupyter hub

--- a/config-as-code/helm/charts/cluster-configs/values.yaml
+++ b/config-as-code/helm/charts/cluster-configs/values.yaml
@@ -150,3 +150,7 @@ cluster-configs:
     elastic:
       namespace: egov
       name: elastic
+
+    jupyter:
+      namespace: jupyter
+      name: jupyter
