new kafka and transformer update

--- a/config-as-code/environments/moz-health-uat.yaml
+++ b/config-as-code/environments/moz-health-uat.yaml
@@ -25,8 +25,8 @@ cluster-configs:
         es-host: "elasticsearch-data.es-cluster-v8"
         es-indexer-host: "https://elasticsearch-data.es-cluster-v8:9200/"
         flyway-locations: "filesystem:/flyway/sql,filesystem:/flyway/seed,filesystem:/flyway/qa"
-        kafka-brokers: "kafka-v2.kafka-cluster:9092"
-        kafka-infra-brokers: "kafka-v2-infra.kafka-cluster:9092"
+        kafka-brokers: "b-1.mozhealthuat1.36pa8c.c2.kafka.ap-south-1.amazonaws.com:9092,b-3.mozhealthuat1.36pa8c.c2.kafka.ap-south-1.amazonaws.com:9092,b-2.mozhealthuat1.36pa8c.c2.kafka.ap-south-1.amazonaws.com:9092"
+        kafka-infra-brokers: "b-1.mozhealthuat1.36pa8c.c2.kafka.ap-south-1.amazonaws.com:9092,b-3.mozhealthuat1.36pa8c.c2.kafka.ap-south-1.amazonaws.com:9092,b-2.mozhealthuat1.36pa8c.c2.kafka.ap-south-1.amazonaws.com:9092"
         logging-level-jdbc: "DEBUG"
         mobile-validation-workaround: "true"
         serializers-timezone-in-ist: "true"
