--- a/config-as-code/helm/charts/business-services/dashboard-ingest/values.yaml
+++ b/config-as-code/helm/charts/business-services/dashboard-ingest/values.yaml
@@ -30,15 +30,9 @@ topic-incoming-collection: "dss-collection-update"
 # Additional Container Envs
 env: |
   - name: SERVICES_ESINDEXER_HOST
-    valueFrom:
-      configMapKeyRef:
-        name: egov-config
-        key: es-indexer-host
+    value: http://elasticsearch-data-v1.es-cluster:9200/
   - name: SERVICES_ESINDEXER_HOST_NAME
-    valueFrom:
-      configMapKeyRef:
-        name: egov-config
-        key: es-indexer-host
+    value: http://elasticsearch-data-v1.es-cluster:9200/
   - name: SERVICES_ESINDEXER_HOST_PORT
     value: "9200"
   - name: ES_TARGET_INDEX_NAME
