--- a/config-as-code/environments/moz-health-prd.yaml
+++ b/config-as-code/environments/moz-health-prd.yaml
@@ -27,8 +27,8 @@ cluster-configs:
         es-infra-host: "elasticsearch-data-infra-v1.es-cluster-infra"
         es-indexer-host: "https://elasticsearch-data.es-cluster-v8:9200/"
         flyway-locations: "filesystem:/flyway/sql,filesystem:/flyway/seed,filesystem:/flyway/qa"
-        kafka-brokers: "b-1.mozhealthprd.fkvinj.c4.kafka.af-south-1.amazonaws.com:9092,b-2.mozhealthprd.fkvinj.c4.kafka.af-south-1.amazonaws.com:9092,b-3.mozhealthprd.fkvinj.c4.kafka.af-south-1.amazonaws.com:9092"
-        kafka-infra-brokers: "b-1.mozhealthprd.fkvinj.c4.kafka.af-south-1.amazonaws.com:9092,b-2.mozhealthprd.fkvinj.c4.kafka.af-south-1.amazonaws.com:9092,b-3.mozhealthprd.fkvinj.c4.kafka.af-south-1.amazonaws.com:9092"
+        kafka-brokers: "kafka-v2.kafka-cluster:9092"
+        kafka-infra-brokers: "kafka-v2.kafka-cluster:9092"
         logging-level-jdbc: "DEBUG"
         mobile-validation-workaround: "true"
         serializers-timezone-in-ist: "true"
