--- a/config-as-code/helm/charts/health-services/referralmanagement/values.yaml
+++ b/config-as-code/helm/charts/health-services/referralmanagement/values.yaml
@@ -7,7 +7,7 @@ labels:
 ingress:
   enabled: true
   zuul: true
-  context: "referralmanagement" 
+  context: "referralmanagement"
 
 # Init Containers Configs
 initContainers:
@@ -119,14 +119,14 @@ env: |
     valueFrom:
       configMapKeyRef:
         name: egov-service-host
-        key: household-referral
+        key: household
   - name: EGOV_SEARCH_HOUSEHOLD_URL
     value: "/household/v1/_search"
   - name: EGOV_INDIVIDUAL_HOST
     valueFrom:
       configMapKeyRef:
         name: egov-service-host
-        key: individual-referral
+        key: individual
   - name: EGOV_SEARCH_INDIVIDUAL_URL
     value: "/individual/v1/_search"
   - name: EGOV_PRODUCT_HOST
@@ -140,7 +140,7 @@ env: |
     valueFrom:
       configMapKeyRef:
         name: egov-service-host
-        key: project-referral
+        key: project
   - name: EGOV_SEARCH_PROJECT_TASK_URL
     value: "/project/task/v1/_search"
   - name: EGOV_SEARCH_PROJECT_BENEFICIARY_URL
