--- a/config-as-code/helm/charts/core-services/egov-user-chatbot/values.yaml
+++ b/config-as-code/helm/charts/core-services/egov-user-chatbot/values.yaml
@@ -36,7 +36,10 @@ env: |
   - name: SERVER_PORT
     value: "8080"
   - name: SPRING_REDIS_HOST
-    value: redis.backbone
+    valueFrom:
+      configMapKeyRef:
+        name: egov-config
+        key: redis-host
   - name: SPRING_REDIS_PORT
     value: "6379"
   - name: CITIZEN_LOGIN_PASSWORD_OTP_FIXED_VALUE
