--- a/config-as-code/helm/charts/health-services/household/values.yaml
+++ b/config-as-code/helm/charts/health-services/household/values.yaml
@@ -57,7 +57,10 @@ env: |
   - name: HOUSEHOLD.IDGEN.ID.FORMAT
     value: "household.id"
   - name: SPRING_REDIS_HOST
-    value: redis.backbone
+    valueFrom:
+      configMapKeyRef:
+        name: egov-config
+        key: redis-host
   - name: SPRING_REDIS_PORT
     value: "6379"
   - name: SPRING_CACHE_TYPE
