--- a/config-as-code/helm/charts/health-services/product/values.yaml
+++ b/config-as-code/helm/charts/health-services/product/values.yaml
@@ -55,7 +55,10 @@ env: |
   - name: EGOV_IDGEN_INTEGRATION_ENABLED
     value: "true"
   - name: SPRING_REDIS_HOST
-    value: redis.backbone
+    valueFrom:
+      configMapKeyRef:
+        name: egov-config
+        key: redis-host
   - name: SPRING_REDIS_PORT
     value: "6379"
   - name: SPRING_CACHE_TYPE
