--- a/config-as-code/helm/charts/health-services/project-referral/values.yaml
+++ b/config-as-code/helm/charts/health-services/project-referral/values.yaml
@@ -65,7 +65,10 @@ env: |
   - name: IDGEN.PROJECT.BENEFICIARY.ID.FORMAT
     value: "project.beneficiary.id"
   - name: SPRING_REDIS_HOST
-    value: redis.backbone
+    valueFrom:
+      configMapKeyRef:
+        name: egov-config
+        key: redis-host
   - name: SPRING_REDIS_PORT
     value: "6379"
   - name: SPRING_CACHE_TYPE
