--- a/config-as-code/helm/charts/core-services/egov-localization/values.yaml
+++ b/config-as-code/helm/charts/core-services/egov-localization/values.yaml
@@ -36,7 +36,10 @@ env: |
   - name: JAVA_OPTS
     value: {{ index .Values "heap" | quote }}
   - name: SPRING_REDIS_HOST
-    value: redis.backbone
+    valueFrom:
+      configMapKeyRef:
+        name: egov-config
+        key: redis-host
   - name: SPRING_REDIS_PORT
     value: "6379"
   - name: JAEGER_SAMPLER_PARAM
