--- a/config-as-code/helm/charts/core-services/egov-url-shortening/values.yaml
+++ b/config-as-code/helm/charts/core-services/egov-url-shortening/values.yaml
@@ -43,7 +43,10 @@ env: |
   - name: JAVA_ENABLE_DEBUG
     value: "true"
   - name: SPRING_REDIS_HOST
-    value: redis.backbone
+    valueFrom:
+      configMapKeyRef:
+        name: egov-config
+        key: redis-host
   - name: SPRING_REDIS_PORT
     value: "6379"
   - name: SERVER_CONTEXT_PATH
