--- a/config-as-code/helm/charts/health-services/facility/values.yaml
+++ b/config-as-code/helm/charts/health-services/facility/values.yaml
@@ -57,7 +57,10 @@ env: |
   - name: FACILITY.IDGEN.ID.FORMAT
     value: "facility.id"
   - name: SPRING_REDIS_HOST
-    value: redis.backbone
+    valueFrom:
+      configMapKeyRef:
+        name: egov-config
+        key: redis-host
   - name: SPRING_REDIS_PORT
     value: "6379"
   - name: SPRING_CACHE_TYPE
