--- a/config-as-code/helm/charts/health-services/stock/values.yaml
+++ b/config-as-code/helm/charts/health-services/stock/values.yaml
@@ -59,7 +59,10 @@ env: |
   - name: STOCK.RECONCILIATION.IDGEN.ID.FORMAT
     value: "stock.reconciliation.id"
   - name: SPRING_REDIS_HOST
-    value: redis.backbone
+    valueFrom:
+      configMapKeyRef:
+        name: egov-config
+        key: redis-host
   - name: SPRING_REDIS_PORT
     value: "6379"
   - name: SPRING_CACHE_TYPE
